feat(h264-dump): support configurable output paths
Delegate the default dump path to an injectable Path constructor and expose AutoCloseable cleanup. Cover truncation and ordered chunk writes with a temporary-directory test.